pkg/kgateway/setup/testdata/standard/backendconfigpolicy-tunnel-out.yaml
clusters:
- connectTimeout: 5s
  loadAssignment:
    clusterName: backend_gwtest_external_0
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            pipe:
              path: '@connect_tunnel_e0b310a976fdec47'
          hostname: external.example.com
  name: backend_gwtest_external_0
  transportSocket:
    name: envoy.transport_sockets.tls
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
      commonTlsContext:
        combinedValidationContext:
          defaultValidationContext: {}
          validationContextSdsSecretConfig:
            name: SYSTEM_CA_CERT
      sni: external.example.com
  type: STATIC
- commonLbConfig:
    localityWeightedLbConfig: {}
  connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  name: kube_default_kubernetes_443
  type: EDS
- commonLbConfig:
    localityWeightedLbConfig: {}
  connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  name: kube_gwtest_egress-proxy_3128
  type: EDS
endpoints:
- clusterName: kube_gwtest_egress-proxy_3128
listeners:
- address:
    pipe:
      path: '@connect_tunnel_e0b310a976fdec47'
  filterChains:
  - filters:
    - name: envoy.filters.network.tcp_proxy
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
        cluster: kube_gwtest_egress-proxy_3128
        statPrefix: connect_tunnel_backend_gwtest_external_0
        tunnelingConfig:
          formatters:
          - name: envoy.formatter.generic_secret
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.formatter.generic_secret.v3.GenericSecret
              secretConfigs:
                connect_tunnel_backend_gwtest_external_0/3e90a4cb1a8f0177:
                  name: connect_tunnel_backend_gwtest_external_0/3e90a4cb1a8f0177
                  sdsConfig:
                    ads: {}
                    resourceApiVersion: V3
          headersToAdd:
          - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
            header:
              key: Proxy-Authorization
              value: '%SECRET(connect_tunnel_backend_gwtest_external_0/3e90a4cb1a8f0177)%'
          hostname: external.example.com:443
  name: connect_tunnel_backend_gwtest_external_0
  statPrefix: connect_tunnel_backend_gwtest_external_0
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 8080
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: listener~8080
        statPrefix: http
        useRemoteAddress: true
    name: listener~8080
  name: listener~8080
routes:
- ignorePortInHostMatching: true
  name: listener~8080
  virtualHosts:
  - domains:
    - www.example.com
    name: listener~8080~www_example_com
    routes:
    - match:
        prefix: /
      name: listener~8080~www_example_com-route-0-httproute-external-gwtest-0-0-matcher-0
      route:
        cluster: backend_gwtest_external_0
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
